libfiu (0.91-2) UNRELEASED; urgency=low

  * Require the testsuite to pass at request of upstream - was optional since
    0.90-3.

 -- Chris Lamb <lamby@debian.org>  Wed, 12 Sep 2012 00:59:47 +0100

libfiu (0.91-1) unstable; urgency=low

  * New upstream release.
  * Update symbols.
  * Drop 01_wrap_python_for_tests.diff - applied upstream.
  * Drop 02_include_stdlib.diff - applied upstream.

 -- Chris Lamb <lamby@debian.org>  Thu, 06 Sep 2012 02:29:33 +0100

libfiu (0.90-3) unstable; urgency=low

  * Make passing the testsuite optional; upstream does not 100% rely on it yet
    on all architectures.

 -- Chris Lamb <lamby@debian.org>  Wed, 11 Apr 2012 11:19:27 +0100

libfiu (0.90-2) unstable; urgency=low

  * Apply patch from upstream to attempt to fix broken builds.
    <http://blitiri.com.ar/git/?p=libfiu;a=commit;h=005a56fbcb5ab8045f9d51676c521b335f058552>

 -- Chris Lamb <lamby@debian.org>  Fri, 06 Apr 2012 19:03:08 +0100

libfiu (0.90-1) unstable; urgency=low

  * New upstream release.
  * Add python3-dev to Build-Depends.
  * Add patch from upstream to fix Python tests.
    <http://blitiri.com.ar/git/?p=libfiu;a=commit;h=83fb1e675de26ad5409e554e2947e53c8f1b10c0>
  * Update symbols.

 -- Chris Lamb <lamby@debian.org>  Thu, 05 Apr 2012 09:26:02 +0100

libfiu (0.14-2) unstable; urgency=low

  * Add missing Build-Depends on python-support. (Closes: #642450)

 -- Chris Lamb <lamby@debian.org>  Wed, 16 Nov 2011 17:38:10 +0000

libfiu (0.14-1) unstable; urgency=low

  * New upstream release.
    - Drop "01_libc6_location.diff"; applied upstream.
    - Drop "02_mode_t_freebsd.diff"; applied upstream.
  * Update Vcs-{Git,Browser}.
  * Bump Standards-Version to 3.9.1.
  * Bump Standards-Version to 3.9.2.

 -- Chris Lamb <lamby@debian.org>  Fri, 15 Jul 2011 16:19:14 +0100

libfiu (0.13-3) unstable; urgency=low

  * Normalise override disparity by moving fiu-utils from "libdevel" to "devel"
  * Add patch to fix run-time abort on *BSD platforms. (Closes: #574752)
